version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Mechanical/Application/SolveProcessSettings/LinuxSettings.rst.txt
.. vale off



:class:`LinuxSettings`
======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Mechanical.Application.SolveProcessSettings.LinuxSettings

   Bases: :py:obj:`object`


   
   The class representing the linux settings portion of the solve process settings.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: LinuxSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CopyTo`
            - CopyTo method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Active`
            - Whether the linux settings are active.
          * - :py:attr:`~UserName`
            - The user name.
          * - :py:attr:`~WorkingFolder`
            - The working folder.







Property detail
---------------
.. py:property:: Active
   :type: Optional[bool]


   
   Whether the linux settings are active.
















   ..
       !! processed by numpydoc !!

.. py:property:: UserName
   :type: Optional[str]


   
   The user name.
















   ..
       !! processed by numpydoc !!

.. py:property:: WorkingFolder
   :type: Optional[str]


   
   The working folder.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: CopyTo(other: Ansys.ACT.Mechanical.Application.SolveProcessSettings.ILinuxSettings) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on